infra/k8s/elasticsearch.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: eshopx-elasticsearch
spec:
  serviceName: eshopx-elasticsearch-headless
  replicas: 1
  selector:
    matchLabels:
      app: eshopx-elasticsearch
  template:
    metadata:
      labels:
        app: eshopx-elasticsearch
    spec:
      nodeSelector:
        kubernetes.io/hostname: k8s-work1
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
      containers:
        - name: elasticsearch
          image: docker.elastic.co/elasticsearch/elasticsearch:9.3.0
          ports:
            - containerPort: 9200
            - containerPort: 9300
          volumeMounts:
            - name: es-data
              mountPath: /usr/share/elasticsearch/data
  volumeClaimTemplates:
    - metadata:
        name: es-data
      spec:
        accessModes:
          - ReadWriteOnce
        storageClassName: gp3
        resources:
          requests:
            storage: 10Gi
---
apiVersion: v1
kind: Service
metadata:
  name: eshopx-elasticsearch-headless
spec:
  clusterIP: None
  selector:
    app: eshopx-elasticsearch
  ports:
    - name: http
      port: 9200
      targetPort: 9200
    - name: transport
      port: 9300
      targetPort: 9300
---
apiVersion: v1
kind: Service
metadata:
  name: eshopx-elasticsearch
spec:
  selector:
    app: eshopx-elasticsearch
  ports:
    - name: http
      port: 9200
      targetPort: 9200
