infra/k8s/kafka.yaml
apiVersion: v1
kind: Service
metadata:
  name: eshopx-kafka-headless
spec:
  clusterIP: None
  selector:
    app: eshopx-kafka
  ports:
    - name: plaintext
      port: 9092
      targetPort: 9092
    - name: controller
      port: 9093
      targetPort: 9093
---
apiVersion: v1
kind: Service
metadata:
  name: eshopx-kafka
spec:
  selector:
    app: eshopx-kafka
  ports:
    - name: plaintext
      port: 9092
      targetPort: 9092
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: eshopx-kafka
spec:
  serviceName: eshopx-kafka-headless
  replicas: 1
  selector:
    matchLabels:
      app: eshopx-kafka
  template:
    metadata:
      labels:
        app: eshopx-kafka
    spec:
      nodeSelector:
        kubernetes.io/hostname: k8s-work2
      containers:
        - name: kafka
          image: apache/kafka:latest
          ports:
            - containerPort: 9092
              name: plaintext
            - containerPort: 9093
              name: controller
          readinessProbe:
            tcpSocket:
              port: 9092
            initialDelaySeconds: 20
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: 9092
            initialDelaySeconds: 30
            periodSeconds: 20
          volumeMounts:
            - name: kafka-data
              mountPath: /var/lib/kafka/data
  volumeClaimTemplates:
    - metadata:
        name: kafka-data
      spec:
        accessModes:
          - ReadWriteOnce
        storageClassName: gp3
        resources:
          requests:
            storage: 5Gi
