infra/k8s/postgres.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: eshopx-postgres
spec:
  serviceName: eshopx-postgres-headless
  replicas: 1
  selector:
    matchLabels:
      app: eshopx-postgres
  template:
    metadata:
      labels:
        app: eshopx-postgres
    spec:
      nodeSelector:
        kubernetes.io/hostname: k8s-work1
      containers:
        - name: postgres
          image: postgres:18
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: pgdata
              mountPath: /var/lib/postgresql
  volumeClaimTemplates:
    - metadata:
        name: pgdata
      spec:
        accessModes:
          - ReadWriteOnce
        storageClassName: gp3
        resources:
          requests:
            storage: 5Gi
---
apiVersion: v1
kind: Service
metadata:
  name: eshopx-postgres-headless
spec:
  clusterIP: None
  selector:
    app: eshopx-postgres
  ports:
    - port: 5432
      targetPort: 5432
---
apiVersion: v1
kind: Service
metadata:
  name: eshopx-postgres
spec:
  selector:
    app: eshopx-postgres
  ports:
    - port: 5432
      targetPort: 5432
