infra/k8s/redis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eshopx-redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: eshopx-redis
  template:
    metadata:
      labels:
        app: eshopx-redis
    spec:
      nodeSelector:
        kubernetes.io/hostname: k8s-work1
      securityContext:
        runAsUser: 999
        runAsGroup: 999
        fsGroup: 999
      containers:
        - name: redis
          image: redis:latest
          ports:
            - containerPort: 6379
          args:
            - "redis-server"
            - "--requirepass"
            - "$(REDIS_PASSWORD)"
            - "--appendonly"
            - "yes"
          volumeMounts:
            - name: redis-data
              mountPath: /data
      volumes:
        - name: redis-data
          persistentVolumeClaim:
            claimName: eshopx-redis-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: eshopx-redis
spec:
  selector:
    app: eshopx-redis
  ports:
    - port: 6379
      targetPort: 6379
