infra/k8s/web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eshopx-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: eshopx-web
  template:
    metadata:
      labels:
        app: eshopx-web
    spec:
      nodeSelector:
        kubernetes.io/hostname: k8s-work1
      containers:
        - name: web
          image: davidchen617/eshopx-web:latest
          args: ["nginx","-g","daemon off;"]
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: eshopx-web
spec:
  selector:
    app: eshopx-web
  ports:
    - port: 80
      targetPort: 80
