infra/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: eshopx-ing
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/proxy-body-size: "20m"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - eshop-x.com
    secretName: super-cow
  rules:
  - host: eshop-x.com
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: eshopx-api
            port:
              number: 5177
      - path: /
        pathType: Prefix
        backend:
          service:
            name: eshopx-web
            port:
              number: 80
